[package]
name = "planit"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
mongodb = "3.0.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
tokio = "1.39.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0.63"
